--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -49,7 +49,7 @@ footer {
     padding: 3.75rem 2rem;
     /* max-width: 69.6875rem; */
 }
-@media (min-width:50px) and (max-width:1024px) {
+@media (min-width:768px) and (max-width:1024px) {
     footer{
         background: black;
         text-align: center;
@@ -70,9 +70,65 @@ footer {
         flex-direction: column;
         color: white;
     }
+
+    /* .links__box{
+        display: flex;
+        flex-direction: column;
+        list-style-type: none;
+        text-align: center;
+    } */
+
+    .links__box {
+        text-align: center;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }   
+
+   /*  li  */.links {
+    width: 100%;
+    align-items: center;
+    justify-self: center;
+    text-align: center;
+}
+
+    .footer__social{
+        margin-bottom: 1.875rem;
+        margin-top: 1.875rem;  
+        margin-left: 9rem;   
+    } 
+}
+@media (min-width:50px) and (max-width:767px) {
+    footer{
+        background: black;
+        text-align: center;
+    }
+    .logo{
+        text-align: center;
+    }
+    .foot_logo {
+        margin-bottom: 1.875rem;
+        margin-top: 1.875rem;
+        align-self: flex-start;
+        margin-left: 0;
+    }
+    .footer-container{
+        display: flex;
+        flex-direction: column;
+        justify-self: flex-start;
+        justify-content: space-between;
+        text-align: center;
+    }
+    .footer-content {
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+        color: white;
+    }   
     .links__box{
         display: flex;
         flex-direction: column;
+        padding: 0;
         list-style-type: none;
         /* text-align: center; */
     }
@@ -84,6 +140,6 @@ footer {
     .footer__social{
         margin-bottom: 1.875rem;
         margin-top: 1.875rem;  
-        margin-left: 9rem;   
+        margin-right: 0;  
     } 
 }
